<resources>
    <string name="app_name">Ruc</string>
    <string name="todo">TODO</string>
    <string name="tomorrowText">Расписание на завтра</string>
    <string name="item_title">1. Литература</string>
    <string name="item_time">8:30-10:10</string>
    <string name="item_name">Курасова Виктория Анатольевна</string>
    <string name="item_place">ауд. В-202</string>
    <string name="item_type">практические занятия</string>
    <string name="settings_first_title">Настрой меня</string>
    <string name="branch">филиал</string>
    <string name="settings_first_end">закончить</string>
    <string name="settings_first_employee">работник</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_schedule">Расписание</string>
    <string name="menu_settings">Настройки</string>
    <string name="settings_switch_left">Студент</string>
    <string name="settings_switch_right">Препод</string>
    <string name="about">Автор: JavaKira\nТелеграмм: <a href="https://t.me/javapedik">@javapedik</a>\nВКонтакте: <a href="https://vk.com/javapedik">@javapedik</a>\n<a href="https://github.com/javakira/ruc">Исходный код на Github</a></string>
    <string name="menu_about">О приложении</string>
</resources>