<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.github.javakira.ruc.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.github.javakira.ruc.ui.schedule.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.github.javakira.ruc.ui.schedule.AboutFragment"
        android:label="@string/menu_about" />
</navigation>